# flask-template

./: .gitignore  README.md  setup.cfg
conf/: logging.conf  pipeline.template.conf
flask/app/: __init__.py  __main__.py  app.py
flask/docs/_build/html/: index.html
flask_app/: run.py
flask_app/app/: __init__.py  __main__.py  endpoints.py
flask_app/app/api/: openapi.yaml  swagger.yaml
flask_app/tests/: test_endpoints.py  test_server.py
scripts/: run_script.py
src/flask_template/: __init__.py  __main__.py  funcs.py
