[metadata]
name = flask_template
version = 0.1.0
author = Neel Roshania
author_email = nroshania@gmail.com
description = boiler-plate flask api configured to the OpenAPI specification
platform = unix, linux, osx, cygwin, win64

[options]
packages =
    flask_template
install_requires =
    ipykernel
    configparser
    black==21.7b0
    invoke==1.6.0
    flake8==3.9.2
    pytest==6.2.4
    mypy==0.910
    flake8-import-order==0.18.1
python_requires = >=3.9
package_dir =
    =src
[options.extras_require]
dev = 
    flask
    connexion
    connexion[flask]
    connexion[swagger-ui]
    connexion[uvicorn]
    gunicorn
prod = 
    flask
    connexion
    connexion[flask]
    gunicorn
